
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int printf (char*) ;
 char* shellcode ;

__attribute__((used)) static bool shellcode_setport(char *buf, int port) {

    if (port<1024 || port>65535) return 0;

    int shellcode_port_offset = 20;

    *(short *)(buf+shellcode_port_offset) = port;

    char tmp = buf[shellcode_port_offset];
    buf[shellcode_port_offset] = buf[shellcode_port_offset+1];
    buf[shellcode_port_offset+1] = tmp;

    if (shellcode[20] == '\x00' || shellcode[21] == '\x00') {
     printf("port HEX contains zeroes\n"); return 0;
    }

    return 1;
}
